# Oxtorio

./: .gitignore  CMakeLists.txt  README.md
Oxtorio/: CMakeLists.txt  Oxtorio.oxproj
Oxtorio/Assets/Objects/: belt.glb  box.glb  ground.glb  iron_ore.glb  miner.glb
Oxtorio/Assets/Scenes/: Main.oxscene
Oxtorio/Assets/Scripts/: BeltSystem.lua  CameraController.lua  ItemSpawner.lua  MinerSystem.lua
Oxtorio/src/: App.cpp  Components.h  OxtorioLayer.cpp  OxtorioLayer.h
Oxtorio/src/UI/: UI.cpp  UI.h
OxtorioModule/: CMakeLists.txt
OxtorioModule/src/: Components.h  Module.cpp  Module.h
